<?xml version="1.0" encoding="utf-8"?>

<!--< The Main-Menu Screen for Snap a' Snack />-->
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    tools:context=".view.activity.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="336dp"
            android:layout_height="77dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="92dp"
            android:fontFamily="@font/advent_pro_semibold"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:="@mipmap/icon_cartoon_shrimp"-->
            <!--/>-->

        <Button
            android:id="@+id/uploadImagesButton"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/advent_pro_semibold"
            android:text="@string/main_menu_btn_upload"
            android:textSize="30sp"
            android:drawableLeft="@drawable/ic_photo"
            android:drawablePadding="50dp"
            android:gravity="left|center_vertical"
            app:layout_constraintBottom_toTopOf="@+id/galleryview"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.687" />

        <Button
            android:id="@+id/galleryview"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="168dp"
            android:fontFamily="@font/advent_pro_semibold"
            android:text="@string/main_menu_btn_gallery"
            android:textSize="30sp"
            android:drawableLeft="@drawable/ic_gallery"
            android:drawablePadding="35dp"
            android:gravity="left|center_vertical"
            app:layout_constrainedWidth="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>